parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Comandos
Rule 1     Comandos -> Comandos Comando
Rule 2     Comandos -> Comando
Rule 3     Comando -> Printing
Rule 4     Comando -> Reading
Rule 5     Comando -> Writing
Rule 6     Comando -> Start
Rule 7     Comando -> Exp
Rule 8     Comando -> Atrib
Rule 9     Comando -> Condition
Rule 10    Comando -> Cicle
Rule 11    Comando -> End
Rule 12    Printing -> PRINT frase
Rule 13    Reading -> READ id
Rule 14    Writing -> WRITE id
Rule 15    Writing -> WRITE id [ num ]
Rule 16    Start -> START
Rule 17    Exp -> Exp + Termo
Rule 18    Exp -> Exp - Termo
Rule 19    Exp -> Termo
Rule 20    Termo -> Termo * Factor
Rule 21    Termo -> Termo / Factor
Rule 22    Termo -> Factor
Rule 23    Factor -> id
Rule 24    Factor -> num
Rule 25    Factor -> ( Exp )
Rule 26    Factor -> Array
Rule 27    Factor -> Matriz
Rule 28    End -> END
Rule 29    Atrib -> id = Exp
Rule 30    Condition -> IF ( Exp > Termo ) THEN Comandos ELSE Comandos FI
Rule 31    Condition -> IF ( Exp < Termo ) THEN Comandos ELSE Comandos FI
Rule 32    Condition -> IF ( Exp > = Termo ) THEN Comandos ELSE Comandos FI
Rule 33    Condition -> IF ( Exp < = Termo ) THEN Comandos ELSE Comandos FI
Rule 34    Condition -> IF ( Exp = = Termo ) THEN Comandos ELSE Comandos FI
Rule 35    Condition -> IF ( Exp ! = Termo ) THEN Comandos ELSE Comandos FI
Rule 36    Cicle -> FOR ( Atrib ; Factor < Factor ; Atrib ) Comandos ROF
Rule 37    Cicle -> FOR ( Atrib ; Factor > Factor ; Atrib ) Comandos ROF
Rule 38    Cicle -> FOR ( Atrib ; Factor < = Factor ; Atrib ) Comandos ROF
Rule 39    Cicle -> FOR ( Atrib ; Factor > = Factor ; Atrib ) Comandos ROF
Rule 40    Cicle -> FOR ( Atrib ; Factor = = Factor ; Atrib ) Comandos ROF
Rule 41    Cicle -> FOR ( Atrib ; Factor ! = Factor ; Atrib ) Comandos ROF
Rule 42    Array -> id [ num ]
Rule 43    Atrib -> id [ num ] = num
Rule 44    Matriz -> id [ num ] [ num ]
Rule 45    Atrib -> id [ num ] [ num ] = num

Terminals, with rules where they appear

!                    : 35 41
(                    : 25 30 31 32 33 34 35 36 37 38 39 40 41
)                    : 25 30 31 32 33 34 35 36 37 38 39 40 41
*                    : 20
+                    : 17
-                    : 18
/                    : 21
;                    : 36 36 37 37 38 38 39 39 40 40 41 41
<                    : 31 33 36 38
=                    : 29 32 33 34 34 35 38 39 40 40 41 43 45
>                    : 30 32 37 39
ELSE                 : 30 31 32 33 34 35
END                  : 28
FI                   : 30 31 32 33 34 35
FOR                  : 36 37 38 39 40 41
IF                   : 30 31 32 33 34 35
PRINT                : 12
READ                 : 13
ROF                  : 36 37 38 39 40 41
START                : 16
THEN                 : 30 31 32 33 34 35
WRITE                : 14 15
[                    : 15 42 43 44 44 45 45
]                    : 15 42 43 44 44 45 45
error                : 
frase                : 12
id                   : 13 14 15 23 29 42 43 44 45
num                  : 15 24 42 43 43 44 44 45 45 45

Nonterminals, with rules where they appear

Array                : 26
Atrib                : 8 36 36 37 37 38 38 39 39 40 40 41 41
Cicle                : 10
Comando              : 1 2
Comandos             : 1 30 30 31 31 32 32 33 33 34 34 35 35 36 37 38 39 40 41 0
Condition            : 9
End                  : 11
Exp                  : 7 17 18 25 29 30 31 32 33 34 35
Factor               : 20 21 22 36 36 37 37 38 38 39 39 40 40 41 41
Matriz               : 27
Printing             : 3
Reading              : 4
Start                : 6
Termo                : 17 18 19 20 21 30 31 32 33 34 35
Writing              : 5

Parsing method: LALR

state 0

    (0) S' -> . Comandos
    (1) Comandos -> . Comandos Comando
    (2) Comandos -> . Comando
    (3) Comando -> . Printing
    (4) Comando -> . Reading
    (5) Comando -> . Writing
    (6) Comando -> . Start
    (7) Comando -> . Exp
    (8) Comando -> . Atrib
    (9) Comando -> . Condition
    (10) Comando -> . Cicle
    (11) Comando -> . End
    (12) Printing -> . PRINT frase
    (13) Reading -> . READ id
    (14) Writing -> . WRITE id
    (15) Writing -> . WRITE id [ num ]
    (16) Start -> . START
    (17) Exp -> . Exp + Termo
    (18) Exp -> . Exp - Termo
    (19) Exp -> . Termo
    (29) Atrib -> . id = Exp
    (43) Atrib -> . id [ num ] = num
    (45) Atrib -> . id [ num ] [ num ] = num
    (30) Condition -> . IF ( Exp > Termo ) THEN Comandos ELSE Comandos FI
    (31) Condition -> . IF ( Exp < Termo ) THEN Comandos ELSE Comandos FI
    (32) Condition -> . IF ( Exp > = Termo ) THEN Comandos ELSE Comandos FI
    (33) Condition -> . IF ( Exp < = Termo ) THEN Comandos ELSE Comandos FI
    (34) Condition -> . IF ( Exp = = Termo ) THEN Comandos ELSE Comandos FI
    (35) Condition -> . IF ( Exp ! = Termo ) THEN Comandos ELSE Comandos FI
    (36) Cicle -> . FOR ( Atrib ; Factor < Factor ; Atrib ) Comandos ROF
    (37) Cicle -> . FOR ( Atrib ; Factor > Factor ; Atrib ) Comandos ROF
    (38) Cicle -> . FOR ( Atrib ; Factor < = Factor ; Atrib ) Comandos ROF
    (39) Cicle -> . FOR ( Atrib ; Factor > = Factor ; Atrib ) Comandos ROF
    (40) Cicle -> . FOR ( Atrib ; Factor = = Factor ; Atrib ) Comandos ROF
    (41) Cicle -> . FOR ( Atrib ; Factor ! = Factor ; Atrib ) Comandos ROF
    (28) End -> . END
    (20) Termo -> . Termo * Factor
    (21) Termo -> . Termo / Factor
    (22) Termo -> . Factor
    (23) Factor -> . id
    (24) Factor -> . num
    (25) Factor -> . ( Exp )
    (26) Factor -> . Array
    (27) Factor -> . Matriz
    (42) Array -> . id [ num ]
    (44) Matriz -> . id [ num ] [ num ]

    PRINT           shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 15
    START           shift and go to state 17
    id              shift and go to state 14
    IF              shift and go to state 19
    FOR             shift and go to state 21
    END             shift and go to state 23
    num             shift and go to state 16
    (               shift and go to state 20

    Comandos                       shift and go to state 1
    Comando                        shift and go to state 2
    Printing                       shift and go to state 3
    Reading                        shift and go to state 4
    Writing                        shift and go to state 5
    Start                          shift and go to state 6
    Exp                            shift and go to state 7
    Atrib                          shift and go to state 8
    Condition                      shift and go to state 9
    Cicle                          shift and go to state 10
    End                            shift and go to state 11
    Termo                          shift and go to state 18
    Factor                         shift and go to state 22
    Array                          shift and go to state 24
    Matriz                         shift and go to state 25

state 1

    (0) S' -> Comandos .
    (1) Comandos -> Comandos . Comando
    (3) Comando -> . Printing
    (4) Comando -> . Reading
    (5) Comando -> . Writing
    (6) Comando -> . Start
    (7) Comando -> . Exp
    (8) Comando -> . Atrib
    (9) Comando -> . Condition
    (10) Comando -> . Cicle
    (11) Comando -> . End
    (12) Printing -> . PRINT frase
    (13) Reading -> . READ id
    (14) Writing -> . WRITE id
    (15) Writing -> . WRITE id [ num ]
    (16) Start -> . START
    (17) Exp -> . Exp + Termo
    (18) Exp -> . Exp - Termo
    (19) Exp -> . Termo
    (29) Atrib -> . id = Exp
    (43) Atrib -> . id [ num ] = num
    (45) Atrib -> . id [ num ] [ num ] = num
    (30) Condition -> . IF ( Exp > Termo ) THEN Comandos ELSE Comandos FI
    (31) Condition -> . IF ( Exp < Termo ) THEN Comandos ELSE Comandos FI
    (32) Condition -> . IF ( Exp > = Termo ) THEN Comandos ELSE Comandos FI
    (33) Condition -> . IF ( Exp < = Termo ) THEN Comandos ELSE Comandos FI
    (34) Condition -> . IF ( Exp = = Termo ) THEN Comandos ELSE Comandos FI
    (35) Condition -> . IF ( Exp ! = Termo ) THEN Comandos ELSE Comandos FI
    (36) Cicle -> . FOR ( Atrib ; Factor < Factor ; Atrib ) Comandos ROF
    (37) Cicle -> . FOR ( Atrib ; Factor > Factor ; Atrib ) Comandos ROF
    (38) Cicle -> . FOR ( Atrib ; Factor < = Factor ; Atrib ) Comandos ROF
    (39) Cicle -> . FOR ( Atrib ; Factor > = Factor ; Atrib ) Comandos ROF
    (40) Cicle -> . FOR ( Atrib ; Factor = = Factor ; Atrib ) Comandos ROF
    (41) Cicle -> . FOR ( Atrib ; Factor ! = Factor ; Atrib ) Comandos ROF
    (28) End -> . END
    (20) Termo -> . Termo * Factor
    (21) Termo -> . Termo / Factor
    (22) Termo -> . Factor
    (23) Factor -> . id
    (24) Factor -> . num
    (25) Factor -> . ( Exp )
    (26) Factor -> . Array
    (27) Factor -> . Matriz
    (42) Array -> . id [ num ]
    (44) Matriz -> . id [ num ] [ num ]

    PRINT           shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 15
    START           shift and go to state 17
    id              shift and go to state 14
    IF              shift and go to state 19
    FOR             shift and go to state 21
    END             shift and go to state 23
    num             shift and go to state 16
    (               shift and go to state 20

    Comando                        shift and go to state 26
    Printing                       shift and go to state 3
    Reading                        shift and go to state 4
    Writing                        shift and go to state 5
    Start                          shift and go to state 6
    Exp                            shift and go to state 7
    Atrib                          shift and go to state 8
    Condition                      shift and go to state 9
    Cicle                          shift and go to state 10
    End                            shift and go to state 11
    Termo                          shift and go to state 18
    Factor                         shift and go to state 22
    Array                          shift and go to state 24
    Matriz                         shift and go to state 25

state 2

    (2) Comandos -> Comando .

    PRINT           reduce using rule 2 (Comandos -> Comando .)
    READ            reduce using rule 2 (Comandos -> Comando .)
    WRITE           reduce using rule 2 (Comandos -> Comando .)
    START           reduce using rule 2 (Comandos -> Comando .)
    id              reduce using rule 2 (Comandos -> Comando .)
    IF              reduce using rule 2 (Comandos -> Comando .)
    FOR             reduce using rule 2 (Comandos -> Comando .)
    END             reduce using rule 2 (Comandos -> Comando .)
    num             reduce using rule 2 (Comandos -> Comando .)
    (               reduce using rule 2 (Comandos -> Comando .)
    $end            reduce using rule 2 (Comandos -> Comando .)
    ELSE            reduce using rule 2 (Comandos -> Comando .)
    FI              reduce using rule 2 (Comandos -> Comando .)
    ROF             reduce using rule 2 (Comandos -> Comando .)


state 3

    (3) Comando -> Printing .

    PRINT           reduce using rule 3 (Comando -> Printing .)
    READ            reduce using rule 3 (Comando -> Printing .)
    WRITE           reduce using rule 3 (Comando -> Printing .)
    START           reduce using rule 3 (Comando -> Printing .)
    id              reduce using rule 3 (Comando -> Printing .)
    IF              reduce using rule 3 (Comando -> Printing .)
    FOR             reduce using rule 3 (Comando -> Printing .)
    END             reduce using rule 3 (Comando -> Printing .)
    num             reduce using rule 3 (Comando -> Printing .)
    (               reduce using rule 3 (Comando -> Printing .)
    $end            reduce using rule 3 (Comando -> Printing .)
    ELSE            reduce using rule 3 (Comando -> Printing .)
    FI              reduce using rule 3 (Comando -> Printing .)
    ROF             reduce using rule 3 (Comando -> Printing .)


state 4

    (4) Comando -> Reading .

    PRINT           reduce using rule 4 (Comando -> Reading .)
    READ            reduce using rule 4 (Comando -> Reading .)
    WRITE           reduce using rule 4 (Comando -> Reading .)
    START           reduce using rule 4 (Comando -> Reading .)
    id              reduce using rule 4 (Comando -> Reading .)
    IF              reduce using rule 4 (Comando -> Reading .)
    FOR             reduce using rule 4 (Comando -> Reading .)
    END             reduce using rule 4 (Comando -> Reading .)
    num             reduce using rule 4 (Comando -> Reading .)
    (               reduce using rule 4 (Comando -> Reading .)
    $end            reduce using rule 4 (Comando -> Reading .)
    ELSE            reduce using rule 4 (Comando -> Reading .)
    FI              reduce using rule 4 (Comando -> Reading .)
    ROF             reduce using rule 4 (Comando -> Reading .)


state 5

    (5) Comando -> Writing .

    PRINT           reduce using rule 5 (Comando -> Writing .)
    READ            reduce using rule 5 (Comando -> Writing .)
    WRITE           reduce using rule 5 (Comando -> Writing .)
    START           reduce using rule 5 (Comando -> Writing .)
    id              reduce using rule 5 (Comando -> Writing .)
    IF              reduce using rule 5 (Comando -> Writing .)
    FOR             reduce using rule 5 (Comando -> Writing .)
    END             reduce using rule 5 (Comando -> Writing .)
    num             reduce using rule 5 (Comando -> Writing .)
    (               reduce using rule 5 (Comando -> Writing .)
    $end            reduce using rule 5 (Comando -> Writing .)
    ELSE            reduce using rule 5 (Comando -> Writing .)
    FI              reduce using rule 5 (Comando -> Writing .)
    ROF             reduce using rule 5 (Comando -> Writing .)


state 6

    (6) Comando -> Start .

    PRINT           reduce using rule 6 (Comando -> Start .)
    READ            reduce using rule 6 (Comando -> Start .)
    WRITE           reduce using rule 6 (Comando -> Start .)
    START           reduce using rule 6 (Comando -> Start .)
    id              reduce using rule 6 (Comando -> Start .)
    IF              reduce using rule 6 (Comando -> Start .)
    FOR             reduce using rule 6 (Comando -> Start .)
    END             reduce using rule 6 (Comando -> Start .)
    num             reduce using rule 6 (Comando -> Start .)
    (               reduce using rule 6 (Comando -> Start .)
    $end            reduce using rule 6 (Comando -> Start .)
    ELSE            reduce using rule 6 (Comando -> Start .)
    FI              reduce using rule 6 (Comando -> Start .)
    ROF             reduce using rule 6 (Comando -> Start .)


state 7

    (7) Comando -> Exp .
    (17) Exp -> Exp . + Termo
    (18) Exp -> Exp . - Termo

    PRINT           reduce using rule 7 (Comando -> Exp .)
    READ            reduce using rule 7 (Comando -> Exp .)
    WRITE           reduce using rule 7 (Comando -> Exp .)
    START           reduce using rule 7 (Comando -> Exp .)
    id              reduce using rule 7 (Comando -> Exp .)
    IF              reduce using rule 7 (Comando -> Exp .)
    FOR             reduce using rule 7 (Comando -> Exp .)
    END             reduce using rule 7 (Comando -> Exp .)
    num             reduce using rule 7 (Comando -> Exp .)
    (               reduce using rule 7 (Comando -> Exp .)
    $end            reduce using rule 7 (Comando -> Exp .)
    ELSE            reduce using rule 7 (Comando -> Exp .)
    FI              reduce using rule 7 (Comando -> Exp .)
    ROF             reduce using rule 7 (Comando -> Exp .)
    +               shift and go to state 27
    -               shift and go to state 28


state 8

    (8) Comando -> Atrib .

    PRINT           reduce using rule 8 (Comando -> Atrib .)
    READ            reduce using rule 8 (Comando -> Atrib .)
    WRITE           reduce using rule 8 (Comando -> Atrib .)
    START           reduce using rule 8 (Comando -> Atrib .)
    id              reduce using rule 8 (Comando -> Atrib .)
    IF              reduce using rule 8 (Comando -> Atrib .)
    FOR             reduce using rule 8 (Comando -> Atrib .)
    END             reduce using rule 8 (Comando -> Atrib .)
    num             reduce using rule 8 (Comando -> Atrib .)
    (               reduce using rule 8 (Comando -> Atrib .)
    $end            reduce using rule 8 (Comando -> Atrib .)
    ELSE            reduce using rule 8 (Comando -> Atrib .)
    FI              reduce using rule 8 (Comando -> Atrib .)
    ROF             reduce using rule 8 (Comando -> Atrib .)


state 9

    (9) Comando -> Condition .

    PRINT           reduce using rule 9 (Comando -> Condition .)
    READ            reduce using rule 9 (Comando -> Condition .)
    WRITE           reduce using rule 9 (Comando -> Condition .)
    START           reduce using rule 9 (Comando -> Condition .)
    id              reduce using rule 9 (Comando -> Condition .)
    IF              reduce using rule 9 (Comando -> Condition .)
    FOR             reduce using rule 9 (Comando -> Condition .)
    END             reduce using rule 9 (Comando -> Condition .)
    num             reduce using rule 9 (Comando -> Condition .)
    (               reduce using rule 9 (Comando -> Condition .)
    $end            reduce using rule 9 (Comando -> Condition .)
    ELSE            reduce using rule 9 (Comando -> Condition .)
    FI              reduce using rule 9 (Comando -> Condition .)
    ROF             reduce using rule 9 (Comando -> Condition .)


state 10

    (10) Comando -> Cicle .

    PRINT           reduce using rule 10 (Comando -> Cicle .)
    READ            reduce using rule 10 (Comando -> Cicle .)
    WRITE           reduce using rule 10 (Comando -> Cicle .)
    START           reduce using rule 10 (Comando -> Cicle .)
    id              reduce using rule 10 (Comando -> Cicle .)
    IF              reduce using rule 10 (Comando -> Cicle .)
    FOR             reduce using rule 10 (Comando -> Cicle .)
    END             reduce using rule 10 (Comando -> Cicle .)
    num             reduce using rule 10 (Comando -> Cicle .)
    (               reduce using rule 10 (Comando -> Cicle .)
    $end            reduce using rule 10 (Comando -> Cicle .)
    ELSE            reduce using rule 10 (Comando -> Cicle .)
    FI              reduce using rule 10 (Comando -> Cicle .)
    ROF             reduce using rule 10 (Comando -> Cicle .)


state 11

    (11) Comando -> End .

    PRINT           reduce using rule 11 (Comando -> End .)
    READ            reduce using rule 11 (Comando -> End .)
    WRITE           reduce using rule 11 (Comando -> End .)
    START           reduce using rule 11 (Comando -> End .)
    id              reduce using rule 11 (Comando -> End .)
    IF              reduce using rule 11 (Comando -> End .)
    FOR             reduce using rule 11 (Comando -> End .)
    END             reduce using rule 11 (Comando -> End .)
    num             reduce using rule 11 (Comando -> End .)
    (               reduce using rule 11 (Comando -> End .)
    $end            reduce using rule 11 (Comando -> End .)
    ELSE            reduce using rule 11 (Comando -> End .)
    FI              reduce using rule 11 (Comando -> End .)
    ROF             reduce using rule 11 (Comando -> End .)


state 12

    (12) Printing -> PRINT . frase

    frase           shift and go to state 29


state 13

    (13) Reading -> READ . id

    id              shift and go to state 30


state 14

    (29) Atrib -> id . = Exp
    (43) Atrib -> id . [ num ] = num
    (45) Atrib -> id . [ num ] [ num ] = num
    (23) Factor -> id .
    (42) Array -> id . [ num ]
    (44) Matriz -> id . [ num ] [ num ]

    =               shift and go to state 31
    [               shift and go to state 32
    *               reduce using rule 23 (Factor -> id .)
    /               reduce using rule 23 (Factor -> id .)
    +               reduce using rule 23 (Factor -> id .)
    -               reduce using rule 23 (Factor -> id .)
    PRINT           reduce using rule 23 (Factor -> id .)
    READ            reduce using rule 23 (Factor -> id .)
    WRITE           reduce using rule 23 (Factor -> id .)
    START           reduce using rule 23 (Factor -> id .)
    id              reduce using rule 23 (Factor -> id .)
    IF              reduce using rule 23 (Factor -> id .)
    FOR             reduce using rule 23 (Factor -> id .)
    END             reduce using rule 23 (Factor -> id .)
    num             reduce using rule 23 (Factor -> id .)
    (               reduce using rule 23 (Factor -> id .)
    $end            reduce using rule 23 (Factor -> id .)
    ELSE            reduce using rule 23 (Factor -> id .)
    FI              reduce using rule 23 (Factor -> id .)
    ROF             reduce using rule 23 (Factor -> id .)


state 15

    (14) Writing -> WRITE . id
    (15) Writing -> WRITE . id [ num ]

    id              shift and go to state 33


state 16

    (24) Factor -> num .
